--- a/animation.html
+++ b/animation.html
@@ -7,8 +7,27 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div id="loading">
+      <div class="loadingio-spinner-spinner-2by998twmg8">
+        <div class="ldio-yzaezf3dcmj">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </div>
     <div class="parent-bg">
       <div class="parent"></div>
     </div>
+    <script src="./js/main.js"></script>
   </body>
 </html>
